--- a/planning-web/src/index.css
+++ b/planning-web/src/index.css
@@ -1,7 +1,24 @@
+:root {
+    --dark-theme: #000f26;
+    --transition-duration: .5s
+}
+
 * {
+    transition: background-color var(--transition-duration) linear;
     margin: 0;
     padding: 0;
+    background: none;
     box-sizing: border-box;
+}
+
+button {
+    border: 1px rgba(0, 0, 0, 15%) solid;
+    border-radius: .2em;
+}
+
+a {
+    color: currentColor;
+    text-decoration: none;
 }
 
 .container {
@@ -50,4 +67,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.dark {
+    color-scheme: dark;
+    color: white;
+    background-color: var(--dark-theme);
+
+    & button {
+        border: 1px rgba(255, 255, 255, 15%) solid;
+    }
 }
