Adding a RoomChoose.jsx and navigation

--- a/planning-web/src/index.css
+++ b/planning-web/src/index.css
@@ -3,6 +3,11 @@
     --transition-duration: .5s
 }
 
+body {
+    min-height: 100vh;
+
+}
+
 * {
     transition: background-color var(--transition-duration) linear;
     margin: 0;
@@ -11,6 +16,7 @@
     box-sizing: border-box;
 }
 
+input,
 button {
     border: 1px rgba(0, 0, 0, 15%) solid;
     border-radius: .2em;
@@ -74,6 +80,7 @@ a {
     color: white;
     background-color: var(--dark-theme);
 
+    & input,
     & button {
         border: 1px rgba(255, 255, 255, 15%) solid;
     }
