--- a/planning-web/src/NavBar/NavBar.css
+++ b/planning-web/src/NavBar/NavBar.css
@@ -3,6 +3,7 @@
     position: sticky;
     top: 0;
     justify-content: space-between;
+    align-items: center;
     gap: 1em;
     padding: 1em;
     border-bottom: solid rgba(0, 0, 0, 15%) 1px;
