--- a/planning-web/src/NavBar/NavBar.css
+++ b/planning-web/src/NavBar/NavBar.css
@@ -8,6 +8,7 @@
     padding: 1em;
     border-bottom: solid rgba(0, 0, 0, 15%) 1px;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 5%);
+    z-index: 1;
 }
 
 .dark .nav-bar {
