--- a/planning-web/src/Room/Room.css
+++ b/planning-web/src/Room/Room.css
@@ -1,3 +1,30 @@
 .room {
+    flex: 1 1 0;
+    gap: 2em;
+    flex-wrap: wrap;
 
+    &>main {
+        flex: 2 2 20em;
+        gap: 1em;
+
+        &>h2 {
+            gap: 1em;
+            text-align: center;
+        }
+
+
+        &>ul {
+            gap: 1em;
+            flex-wrap: wrap;
+
+            &>article {
+                gap: .25em;
+                padding: 1em;
+
+                &>section {
+                    gap: 1em;
+                }
+            }
+        }
+    }
 }
