--- a/planning-web/src/Room/Room.css
+++ b/planning-web/src/Room/Room.css
@@ -1,15 +1,16 @@
 .room {
     flex: 1 1 0;
     gap: 2em;
+    row-gap: 0;
     flex-wrap: wrap;
 
     &>main {
+        padding: 1em;
         flex: 2 2 20em;
         gap: 1em;
 
         &>h2 {
             gap: 1em;
-            text-align: center;
         }
 
         &>form {
@@ -39,10 +40,18 @@
             }
         }
 
+        &>button {
+            padding: 1em;
+        }
 
         &>ul {
+            max-width: 40em;
             gap: 1em;
             flex-wrap: wrap;
+            align-items: center;
+            padding: 1em;
+            border-radius: 1em;
+            background-color: rgba(0, 0, 0, 5%);
 
             &>article {
                 gap: .25em;
@@ -59,6 +68,11 @@
 .dark .room {
 
     &>main {
+
+        &>ul {
+
+            background-color: rgba(255, 255, 255, 5%);
+        }
 
         &>form {
             border-top: solid rgba(255, 255, 255, 15%) 1px;
