making light-mode empty cards lighter rather than  darker

--- a/planning-web/src/RoomChoose/RoomChoose.css
+++ b/planning-web/src/RoomChoose/RoomChoose.css
@@ -12,6 +12,7 @@
 
     & form {
         flex: 1 1 20rem;
+        max-width: 30rem;
         background-color: rgba(0, 0, 0, 5%);
         align-items: center;
         padding: 1em;
